# eralchemy

./: .env.example  .gitignore  .pre-commit-config.yaml  .prettierignore  .travis.yml  CHANGELOG.md  LICENSE  LICENSE.md  MANIFEST.in  Makefile  NEWS.rst  README.md  RELEASE.md  cst.py  deploy.sh  docker-compose.yml  init.sql  main.py  models.py  mypy.ini  noxfile.py  pyproject.toml  readme.md  readme.rst  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  sqla.py  test_requirements.txt  tox.ini
.bin/: check_release  check_version
.devcontainer/: devcontainer.json
.github/workflows/: publish.yaml  python-app.yml  unit.yaml
bigquery_erd/: __init__.py  bigquery.py  cst.py  main.py  models.py  sqla.py  utils.py  version.py
docs/: conf.py  index.rst
docs/_static/: custom.css
eralchemy/: __init__.py  cst.py  helpers.py  main.py  models.py  parser.py  sqla.py  version.py
eralchemy2/: __init__.py  cst.py  helpers.py  main.py  models.py  parser.py  sqla.py  version.py
example/: flask-sqla.py  forum.er  forum.py  graph.py  mermaid.py  newsmeme.er  newsmeme.py  simple.py
examples/: newsmeme.er  newsmeme.md
notebooks/: Untitled.ipynb  dashboard.py  example.py  test.ipynb  test.md
script/: make-release.py  make_release.py  make_release_brew.py
tests/: check_deterministic_render.py  common.py  conftest.py  create_db.py  expected_plain_output.dot  expected_star_primary_output.dot  intermediary_to_dot.py  test_argparse.py  test_config_adjustments.py  test_intermediary_to_dot.py  test_intermediary_to_er.py  test_main.py  test_mermaid.py  test_parser.py  test_sqalchemy_to_intermediary.py  test_sqla_multi_key.py  test_sqla_to_intermediary.py
