[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "eralchemy"
version = "1.5.0"
description = "Simple entity relation (ER) diagrams generation"
authors = [
  { name = "Alexis Benoist", email = "Alexis-benoist@users.noreply.github.com"},
  { name = "Florian Maurer", email = "fmaurer@disroot.org"},
]
license = {text = "Apache-2.0"}
readme = "README.md"

keywords = ["sql", "ORM", "relational databases", "ER diagram", "render"]

classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Database",
]
requires-python = ">=3.8"
dependencies = [
  "sqlalchemy >= 1.4.18"
]

[project.urls]
homepage = "https://github.com/eralchemy/eralchemy"
repository = "https://github.com/eralchemy/eralchemy"

[project.optional-dependencies]
test = [
  "flask-sqlalchemy >= 2.5.1",
  "psycopg2 >= 2.9.3",
  "pytest >= 7.4.3",
  "pytest-cov",
  "pygraphviz >= 1.9",
  "graphviz >= 0.20.3",
]
graphviz = ["graphviz >= 0.20.3"]
pygraphviz = ["pygraphviz >= 1.9"]
dev = [
  "nox",
  "pre-commit"
]
docs = [
  "sphinx>=6.2.1",
  "pydata-sphinx-theme",
  "sphinx-copybutton",
  "sphinx-design",
]

[project.scripts]
eralchemy = "eralchemy.main:cli"

[tool.pytest]
testpaths = "tests"

[tool.pytest.ini_options]
markers = ["external_db"]

[tool.mypy]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
# output
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = ["graphviz.*", "pygraphviz.*", "sqlalchemy.*"]
ignore_missing_imports = true


[tool.ruff]
fix = true
line-length = 100

[tool.ruff.lint]
select = ["D", "E", "F", "W", "I", "UP", "G"]
ignore = [
  "D100",  # Missing docstring in public module
  "D101",  # Missing docstring in public class
  "D102",  # Missing docstring in public method
  "D103",  # Missing docstring in public function
  "D104",  # Missing docstring in public package
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in `__init__`
  "E501",  # line too long
]
ignore-init-module-imports = true

[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.lint.pydocstyle]
convention = "google"
